fix: add overflow auto to popup__back

--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ footer h3{
     padding-top: 300px;
     position: fixed;
     top: 0;
+    overflow: auto;
 }
 .popup__body{
     width: 900px;
